fix: center align anchor

--- a/src/components/FilterSidebar/RangeFacet/RangeFacet.module.css
+++ b/src/components/FilterSidebar/RangeFacet/RangeFacet.module.css
@@ -22,8 +22,9 @@
 .dropdown > .anchor .icon {
   right: var(--ns-space-16);
   display: block;
-  top: var(--ns-space-16);
   position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .dropdown.active .menu {
